--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,7 +24,9 @@
     "prettier"
   ],
   "rules": {
-    "prettier/prettier": "error",
+    "prettier/prettier": ["error", {
+      "endOfLine":"auto"
+    }],
     "import/extensions": [
       "error",
       "ignorePackages",
