--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -50,7 +50,8 @@
       "error"
     ],
     "react/react-in-jsx-scope": "off",
-    "@typescript-eslint/explicit-module-boundary-types": "off"
+    "@typescript-eslint/explicit-module-boundary-types": "off",
+    "import/prefer-default-export": "off"
   },
   "settings": {
     "import/resolver": {
