--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -51,7 +51,8 @@
     ],
     "react/react-in-jsx-scope": "off",
     "@typescript-eslint/explicit-module-boundary-types": "off",
-    "import/prefer-default-export": "off"
+    "import/prefer-default-export": "off",
+    "no-console": "off"
   },
   "settings": {
     "import/resolver": {
